--- a/style.css
+++ b/style.css
@@ -341,4 +341,10 @@ textarea {
   text-align: center;
   color: #333;
 }
+.orders-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px;
+}
 
