--- a/style.css
+++ b/style.css
@@ -144,7 +144,9 @@ footer {
   padding: 20px 32px;
   margin-bottom: 24px;
   width: 100%;
-  max-width: 1080px;
+  max-width: 720px;
+  margin: 0 auto;
+
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   font-size: 14px;
   line-height: 1.5;
