--- a/style.css
+++ b/style.css
@@ -369,4 +369,11 @@ textarea {
   color: #444;
   margin-bottom: 20px;
 }
+.choice-block {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  flex-wrap: wrap;
+  margin-top: 32px;
+}
 
