--- a/style.css
+++ b/style.css
@@ -451,5 +451,8 @@ textarea {
   background: white;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
 }
+body > *:not(header):not(footer) {
+  margin-top: 100px;
+}
 
 
